--- a/rules.html
+++ b/rules.html
@@ -44,7 +44,7 @@
 
 <div class="ruletext">Every competitor must have a puzzle that is WCA legal for the event that they are competing in unless they are told differntly on the competition info page.</div>
 <div class="ruletext">  Every competitor must have an opaque box with an open side to cover the cube during scramble-checking and before inspection. Example: hard box cube packaging.</div>
-<div class="ruletext">  Every competitor must use a speedstacks gen4, gen5, GAN, or QiYi Timer to time their results.</div>
+<div class="ruletext">  Every competitor must use a speedstacks gen4, gen5, GAN, YJ or QiYi Timer to time their results.</div>
 <div class="ruletext">  The judge must have a device that can act as a stopwatch for timing inspection.</div>
 <div class="ruletext">  All competitors must have good lighting so that the judge can see the difference between the colors for scramble-checking.</div>
 
