--- a/rules.html
+++ b/rules.html
@@ -108,6 +108,8 @@
 
 <div class="ruletext"> In the head to head format all of the rules provided above will still count but with the judge has to judge both competitors (the two competitors must still take turns to do their solves).</div>
 
+<div class="ruletext"> A competitor may never look at another competitor solving.</div>
+
 <p>spacer</p>
 
 <h2>Judging</h2>
