--- a/comp1.html
+++ b/comp1.html
@@ -96,7 +96,7 @@
     <td>10:20-11:10</td>
     <td>3x3 Seeding round   </td>
     <td> 10:00.00 Cumulative </td>
-    <td> Top 8</td>
+    <td> Top 4</td>
     <tr>
     <td>11:10-11:40</td>
     <td>Pyraminx First Round  </td>
@@ -163,7 +163,7 @@
 
 <p>spacer</p>
 
-<div class="compinfo"><center>Register here: <a href=https://forms.gle/MVhSUa51oHWtxpu59>register!</a></center></div>
+<div class="compinfo"><center>The registration has closed.</a></center></div>
 
 <div class="compinfo"><center>Please note that if the form is not filled out correctly your registration will not count</center></div>
 
