--- a/g2022VALD10.html
+++ b/g2022VALD10.html
@@ -44,6 +44,66 @@
 
 <p>spacer</p>
 
-<div><center>The groups have not been made yet.</center></div>
+<table><center>
+  <tr>
+    <th>Event</th>
+    <th>Room</th>
+    <th>Task</th>
+    <th>Group</th>
+  </tr>
+
+  <td>2x2 R1  </td>
+  <td> 2 </td>
+  <td>Solving</td>
+  <td>1</td>
+</tr>
+<tr>
+  <td>2x2 R1  </td>
+  <td> 4 </td>
+  <td>Judging</td>
+  <td>2</td>
+</tr>
+  <tr>
+    <td>3x3 R1  </td>
+    <td> 1</td>
+    <td>Judging</td>
+    <td>1</td>
+  </tr>
+  <tr>
+    <td>3x3 R1 </td>
+    <td> 4 </td>
+    <td>Solving</td>
+    <td>2</td>
+  </tr>
+  <td>3x3 R1  </td>
+  <td> 7</td>
+  <td>Judging</td>
+  <td>3</td>
+</tr>
+  <tr>
+    <td>Pyraminx R1  </td>
+    <td> 1 </td>
+    <td>Judging</td>
+    <td>1</td>
+  </tr>
+  <tr>
+    <td>Pyraminx R1  </td>
+    <td> 6 </td>
+    <td>Solving</td>
+    <td>3</td>
+  </tr>
+  <td>4x4 Final  </td>
+  <td> 3 </td>
+  <td>Judging</td>
+  <td>1</td>
+</tr>
+<tr>
+  <td>4x4 Final  </td>
+  <td> 6 </td>
+  <td>Solving</td>
+  <td>2</td>
+</tr>
+</tr>
+</center></table>
 
 <p>spacer></p>
