--- a/g2022LEHM02.html
+++ b/g2022LEHM02.html
@@ -44,44 +44,6 @@
 
 <p>spacer</p>
 
-<table><center>
-  <tr>
-    <th>Event</th>
-    <th>Room</th>
-    <th>Task</th>
-    <th>Group</th>
-  </tr>
-
-  <tr>
-    <td>3x3 R1  </td>
-    <td> 6 </td>
-    <td>Solving</td>
-    <td>3</td>
-  </tr>
-  <tr>
-    <td>Pyraminx R1  </td>
-    <td> 1 </td>
-    <td>Solving</td>
-    <td>1</td>
-  </tr>
-  <tr>
-    <td>Pyraminx R1  </td>
-    <td> 3 </td>
-    <td>Judging</td>
-    <td>2</td>
-  </tr>
-  <td>4x4 Final  </td>
-  <td> 3 </td>
-  <td>Solving</td>
-  <td>1</td>
-</tr>
-<tr>
-  <td>4x4 Final  </td>
-  <td> 6 </td>
-  <td>Judging</td>
-  <td>2</td>
-</tr>
-</tr>
-</center></table>
+<div class=info><center>The groups have not been made yet.</center></div>
 
 <p>spacer></p>
