--- a/gbertramemilnørding.html
+++ b/gbertramemilnørding.html
@@ -42,39 +42,7 @@
 
 <p>spacer</p>
 
-<table><center>
-  <tr>
-    <th>Event</th>
-    <th>Room</th>
-    <th>Task</th>
-    <th>Group</th>
-  </tr>
-
-  <td>2x2 R1  </td>
-  <td> 6 </td>
-  <td>Solving</td>
-  <td>3</td>
-</tr>
-<tr>
-  <td>2x2 R1  </td>
-  <td> 2 </td>
-  <td>Judging</td>
-  <td>1</td>
-</tr>
-  <tr>
-    <td>3x3 R1  </td>
-    <td> 2 </td>
-    <td>Judging</td>
-    <td>1</td>
-  </tr>
-  <tr>
-    <td>3x3 R1 </td>
-    <td> 3 </td>
-    <td>Solving</td>
-    <td>2</td>
-  </tr>
-</tr>
-</center></table>
+<div class=info><center>The groups have not been made yet.</center></div>
 
 
 <p>spacer></p>
