--- a/g2022LUCA01.html
+++ b/g2022LUCA01.html
@@ -43,7 +43,53 @@
 <div class="gregisteredevents"><center>3x3x3, 2x2x2, 4x4x4, Pyraminx</center></div>
 
 <p>spacer</p>
-<div class=info><center>The groups have not been made yet.</center></div>
+
+<table><center>
+  <tr>
+    <th>Event</th>
+    <th>Task</th>
+    <th>Group</th>
+    <th>Station</th>
+  </tr>
+
+  <tr>
+    <td>2x2x2</td>
+    <td>Solving</td>
+    <td>1</td>
+    <td>1</td>
+  </tr>
+  <tr>
+    <td>3x3x3</td>
+    <td>Judging</td>
+    <td>1</td>
+    <td>1</td>
+  </tr>
+  <tr>
+    <td>3x3x3</td>
+    <td>Solving</td>
+    <td>3</td>
+    <td>5</td>
+  </tr>
+<tr>
+  <td>Pyraminx</td>
+  <td>Solving</td>
+  <td>2</td>
+  <td>4</td>
+</tr>
+  <tr>
+    <td>4x4x4</td>
+    <td>Solving</td>
+    <td>1</td>
+    <td>2</td>
+  </tr>
+  <tr>
+    <td>4x4x4</td>
+    <td>Judging</td>
+    <td>3</td>
+    <td>5</td>
+  </tr>
+  <tr>
+  </center></table>
 
 
 <p>spacer></p>
