--- a/gbertramemilnørding.html
+++ b/gbertramemilnørding.html
@@ -42,7 +42,40 @@
 
 <p>spacer</p>
 
-<div class=info><center>The groups have not been made yet.</center></div>
+<table><center>
+  <tr>
+    <th>Event</th>
+    <th>Task</th>
+    <th>Group</th>
+    <th>Station</th>
+  </tr>
+
+  <tr>
+    <td>2x2x2</td>
+    <td>Judging</td>
+    <td>1</td>
+    <td>1</td>
+  </tr>
+  <tr>
+    <td>2x2x2</td>
+    <td>Solving</td>
+    <td>2</td>
+    <td>3</td>
+  </tr>
+  <tr>
+    <td>3x3x3</td>
+    <td>Solving</td>
+    <td>1</td>
+    <td>1</td>
+  </tr>
+  <tr>
+    <td>3x3x3</td>
+    <td>Judging</td>
+    <td>2</td>
+    <td>4</td>
+  </tr>
+  <tr>
+  </center></table>
 
 
 <p>spacer></p>
