--- a/gbertramemilnørding.html
+++ b/gbertramemilnørding.html
@@ -51,25 +51,25 @@
   </tr>
 
   <tr>
-    <td>2x2x2</td>
+    <td>2x2x2 Round 1</td>
     <td>Judging</td>
     <td>1</td>
     <td>1</td>
   </tr>
   <tr>
-    <td>2x2x2</td>
+    <td>2x2x2 Round 1</td>
     <td>Solving</td>
     <td>2</td>
     <td>3</td>
   </tr>
   <tr>
-    <td>3x3x3</td>
+    <td>3x3x3 Seeding Round</td>
     <td>Solving</td>
     <td>1</td>
     <td>1</td>
   </tr>
   <tr>
-    <td>3x3x3</td>
+    <td>3x3x3 Seeding Round</td>
     <td>Judging</td>
     <td>2</td>
     <td>4</td>
