--- a/g2022LEHM02.html
+++ b/g2022LEHM02.html
@@ -52,36 +52,36 @@
     <th>Station</th>
   </tr>
   <tr>
-    <td>3x3x3</td>
+    <td>3x3x3 Seeding Round</td>
     <td>solving</td>
     <td>2</td>
     <td>4</td>
   </tr>
   <tr>
-    <td>3x3x3</td>
+    <td>3x3x3 Seeding Round</td>
     <td>Judging</td>
     <td>3</td>
     <td>5</td>
   </tr>
-  <td>Pyraminx</td>
+  <td>Pyraminx Round 1</td>
   <td>Solving</td>
   <td>1</td>
   <td>2</td>
 </tr>
 <tr>
-  <td>Pyraminx</td>
+  <td>Pyraminx Round 1</td>
   <td>Judging</td>
   <td>2</td>
   <td>3</td>
 </tr>
   <tr>
-    <td>4x4x4</td>
+    <td>4x4x4 Round 1</td>
     <td>Solving</td>
     <td>1</td>
     <td>1</td>
   </tr>
   <tr>
-    <td>4x4x4</td>
+    <td>4x4x4 Round 1</td>
     <td>Judging</td>
     <td>2</td>
     <td>4</td>
