--- a/rules.html
+++ b/rules.html
@@ -48,9 +48,11 @@
 <div class="ruletext">  The judge must have a device that can act as a stopwatch for timing inspection.</div>
 <div class="ruletext">  All competitors must have good lighting so that the judge can see the difference between the colors for scramble-checking.</div>
 
-<div class="ruletext">  Every competitor must have google meets with an activated camera facing the competitor and a working microphone.</div>
+<div class="ruletext">  Every competitor must have Google Meets with an activated camera facing the competitor and a working microphone.</div>
 
 <div class="ruletext">  The competitor is allowed to have a monitor showing the puzzle from an angle they can not see, but it may not be used as an advantage.</div>
+
+<div class="ruletext"> If you use any effects/filters on Google Meets such as blurred background or a different background your results will be disqulaified. </div>
 
 <div class="ruletext"> You must have read the WCA regulations <a href="https://www.worldcubeassociation.org/regulations/">Link</a> And those regulations will count unless you are told differently by a delegate or in these rules.</div>
 
@@ -96,7 +98,7 @@
 
 <div class="ruletext"> When the competitor has lifted the cover the judge must start timing the inspection time and call out the normal WCA inspection calls.</div>
 
-<div class="ruletext"> The competitor must show the judge the time for the finished solve on the google meet camera.</div>
+<div class="ruletext"> The competitor must show the judge the time for the finished solve on the Google Meet camera.</div>
 
 <div class="ruletext"> The WCA regulations count for penalties.</div>
 
