--- a/comp1.html
+++ b/comp1.html
@@ -197,6 +197,11 @@
     <td>3x3, 2x2, 4x4, Pyraminx   </td>
     <td>Denmark</td>
   </tr>
+  <tr>
+    <td>Anton Lerstrup Hylleberg</td>
+    <td>3x3, 2x2, 4x4, Pyraminx   </td>
+    <td>Denmark</td>
+  </tr>
     <tr>
       <td>Bertram Emil Nørding</td>
       <td>3x3, 2x2</td>
