--- a/inturnetcubingilive3x3seedinground.html
+++ b/inturnetcubingilive3x3seedinground.html
@@ -63,6 +63,18 @@
   </tr>
   <tr>
     <td></td>
+    <td>Anton Lerstrup Hylleberg</td>
+    <td>Denmark</td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td></td>
     <td>Bertram Emil Nørding</td>
     <td>Denmark</td>
     <td></td>
