--- a/inturnetcubingilive4x4r1.html
+++ b/inturnetcubingilive4x4r1.html
@@ -63,6 +63,18 @@
   </tr>
   <tr>
     <td></td>
+    <td>Anton Lerstrup Hylleberg</td>
+    <td>Denmark</td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td></td>
     <td>Diego Spallino Valderrama</td>
     <td>Spain</td>
     <td></td>
