--- a/inturnetcubingilive.html
+++ b/inturnetcubingilive.html
@@ -38,17 +38,13 @@
 
 <p>spacer</p>
 
-<div class="lcompheader">Active rounds</div>
-
-<p>spacer</p>
-
 <div class="lcompheader">Schedule</div>
 
 <p>spacer</p>
 
 
    <a href="https://sircrazypaper.github.io/inturnetcubingilive2x2r1.html" class="lbutton">
-    2x2 First round<div>9:50-10:20</div>
+    2x2 Seeding Round<div>9:50-10:20</div>
   </a>
 
 
@@ -58,7 +54,7 @@
 </a>
 
 <a href="https://sircrazypaper.github.io/inturnetcubingilivepyrar1.html" class="lbutton">
-    Pyraminx First round<div>11:10-11:40</div>
+    Pyraminx Seeding Round<div>11:10-11:40</div>
 </a>
 
 <a href="#" class="lbutton">
@@ -66,11 +62,11 @@
 </a>
 
 <a href="#" class="lbutton">
-    2x2 Final<div>13:30-13:50</div>
+    2x2 H2H Final<div>13:30-13:50</div>
 </a>
 
 <a href="#" class="lbutton">
-    Pyraminx Final<div>14:25-14:45</div>
+    Pyraminx H2H Final<div>14:25-14:45</div>
 </a>
 
 <a href="https://sircrazypaper.github.io/inturnetcubingilive4x4r1.html" class="lbutton">
