--- a/inturnetcubingilive2x2r1.html
+++ b/inturnetcubingilive2x2r1.html
@@ -49,65 +49,44 @@
     <th>single</th>
   </tr>
 
+
   <tr>
-    <td></td>
-    <td>Alfred Anthony Riise Lucas</td>
-    <td>Denmark</td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-  </tr>
-  <tr>
-    <td></td>
+    <td>1</td>
     <td>Anton Lerstrup Hylleberg</td>
     <td>Denmark</td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
+    <td>WIN</td>
+    <td>WIN</td>
+    <td>WIN</td>
+    <td>WIN</td>
+    <td>WIN</td>
+    <td>WIN</td>
+    <td>WIN</td>
   </tr>
   <tr>
-    <td></td>
-    <td>Bertram Emil Nørding</td>
-    <td>Denmark</td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-  </tr>
-  <tr>
-    <td></td>
-    <td>Diego Spallino Valderrama</td>
-    <td>Spain</td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-  </tr>
-  <tr>
-    <td></td>
+    <td>2</td>
     <td>Zacharias Mulbjerg</td>
     <td>Denmark</td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
+    <td>2.69</td>
+    <td>4.85</td>
+    <td>2.54</td>
+    <td>2.22</td>
+    <td>3.54</td>
+    <td>2.22</td>
+    <td>2.92</td>
   </tr>
+
+  <tr>
+    <td>3</td>
+    <td>Diego Spallino Valderrama</td>
+    <td>Spain</td>
+    <td>5.84</td>
+    <td>6.62</td>
+    <td>7.55</td>
+    <td>6.25</td>
+    <td>4.87</td>
+    <td>4.25</td>
+    <td>6.24</td>
+  </tr>
+
   </tr>
   </center></table>
