--- a/inturnetcubingilive2x2r1.html
+++ b/inturnetcubingilive2x2r1.html
@@ -46,7 +46,7 @@
     <th>4</th>
     <th>5</th>
     <th>Average</th>
-    <th>single</th>
+    <th>Single</th>
   </tr>
 
 
@@ -71,8 +71,8 @@
     <td>2.54</td>
     <td>2.22</td>
     <td>3.54</td>
-    <td>2.22</td>
     <td>2.92</td>
+    <td>2.22</td>
   </tr>
 
   <tr>
@@ -84,8 +84,8 @@
     <td>7.55</td>
     <td>6.25</td>
     <td>4.87</td>
-    <td>4.25</td>
-    <td>6.24</td>
+    <td>6.44</td>
+    <td>4.87</td>
   </tr>
 
   </tr>
