--- a/inturnetcubingilive3x3seedinground.html
+++ b/inturnetcubingilive3x3seedinground.html
@@ -50,76 +50,42 @@
   </tr>
 
   <tr>
-    <td></td>
-    <td>Alfred Anthony Riise Lucas</td>
-    <td>Denmark</td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-  </tr>
-  <tr>
-    <td></td>
-    <td>Anton Lerstrup Hylleberg</td>
-    <td>Denmark</td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-  </tr>
-  <tr>
-    <td></td>
-    <td>Bertram Emil Nørding</td>
-    <td>Denmark</td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-  </tr>
-  <tr>
-    <td></td>
-    <td>Diego Spallino Valderrama</td>
-    <td>Spain</td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-  </tr>
-  <tr>
-    <td></td>
-    <td>Jonathan Karniala Lehmann</td>
-    <td>Denmark</td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-  </tr>
-  <tr>
-    <td></td>
+    <td>1</td>
     <td>Zacharias Mulbjerg</td>
     <td>Denmark</td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
+    <td>WIN</td>
+    <td>WIN</td>
+    <td>WIN</td>
+    <td>WIN</td>
+    <td>WIN</td>
+    <td>WIN</td>
+    <td>WIN</td>
+  </tr>
+
+  <tr>
+    <td>2</td>
+    <td>Anton Lerstrup Hylleberg</td>
+    <td>Denmark</td>
+    <td>9.47</td>
+    <td>7.85</td>
+    <td>8.26</td>
+    <td>8.01</td>
+    <td>9.49</td>
+    <td>8.58</td>
+    <td>7.85</td>
+  </tr>
+
+  <tr>
+    <td>3</td>
+    <td>Diego Spallino Valderrama</td>
+    <td>Spain</td>
+    <td>10.91</td>
+    <td>11.26</td>
+    <td>10.41</td>
+    <td>11.60</td>
+    <td>9.74</td>
+    <td>10.86</td>
+    <td>9.74</td>
   </tr>
   </tr>
   </center></table>
