--- a/inturnetcubingilivepyrar1.html
+++ b/inturnetcubingilivepyrar1.html
@@ -46,69 +46,49 @@
     <th>4</th>
     <th>5</th>
     <th>Average</th>
-    <th>single</th>
+    <th>Single</th>
   </tr>
 
+
   <tr>
-    <td></td>
-    <td>Alfred Anthony Riise Lucas</td>
-    <td>Denmark</td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-  </tr>
-  <tr>
-    <td></td>
+    <td>1</td>
     <td>Anton Lerstrup Hylleberg</td>
     <td>Denmark</td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-  </tr>
-  <tr>
-    <td></td>
-    <td>Diego Spallino Valderrama</td>
-    <td>Spain</td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
+    <td>WIN</td>
+    <td>WIN</td>
+    <td>WIN</td>
+    <td>WIN</td>
+    <td>WIN</td>
+    <td>WIN</td>
+    <td>WIN</td>
   </tr>
 
   <tr>
-    <td></td>
-    <td>Jonathan Karniala Lehmann</td>
-    <td>Denmark</td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-  </tr>
-  <tr>
-    <td></td>
+    <td>2</td>
     <td>Zacharias Mulbjerg</td>
     <td>Denmark</td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
+    <td>8.14</td>
+    <td>7.12</td>
+    <td>11.36</td>
+    <td>7.24</td>
+    <td>6.49</td>
+    <td>7.50</td>
+    <td>6.49</td>
   </tr>
+  <tr>
+    <td>3</td>
+    <td>Diego Spallino Valderrama</td>
+    <td>Spain</td>
+    <td>8.31</td>
+    <td>19.13</td>
+    <td>9.52</td>
+    <td>12.77</td>
+    <td>9.92</td>
+    <td>10.74</td>
+    <td>9.92</td>
+  </tr>
+
+
+
   </tr>
   </center></table>
