--- a/inturnetcubingilive2x2r2.html
+++ b/inturnetcubingilive2x2r2.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>IN-TURN-ET CUBING I Live</title>
+  <title>IN-TURN-ET CUBING I Live 2x2 First round</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
@@ -29,48 +29,53 @@
 <p>spacer</p>
 <p>spacer</p>
 <p>spacer</p>
-
 <h class="lcompheader">IN-TURN-ET CUBING I</h>
 
 <p>spacer</p>
 
-<div class="lcomptext">The times in the schedule below are displayed in the timezone CEST.</div>
+<div class="lcompheader">2x2 First round</div>
 
-<p>spacer</p>
+<table><center>
+  <tr>
+    <th>#</th>
+    <th>Name</th>
+    <th>Country</th>
+    <th>1</th>
+    <th>2</th>
+    <th>3</th>
+    <th>4</th>
+    <th>5</th>
+    <th>Average</th>
+    <th>Single</th>
+  </tr>
+  <tr>
+    <td>1</td>
+    <td>Zacharias Mulbjerg</td>
+    <td>Denmark</td>
+    <td>2.87</td>
+    <td>3.09</td>
+    <td>2.86</td>
+    <td>2.02</td>
+    <td>2.86</td>
+    <td>2.86</td>
+    <td>2.02</td>
+  </tr>
 
-<div class="lcompheader">Schedule</div>
-
-<p>spacer</p>
-
-
-   <a href="https://sircrazypaper.github.io/inturnetcubingilive2x2r1.html" class="lbutton">
-    2x2 Seeding Round<div>9:50-10:20</div>
-  </a>
-
-
-
-   <a href="https://sircrazypaper.github.io/inturnetcubingilive3x3seedinground.html" class="lbutton">
-    3x3 Seeding round<div>10:20-11:10</div>
-</a>
-
-<a href="https://sircrazypaper.github.io/inturnetcubingilivepyrar1.html" class="lbutton">
-    Pyraminx Seeding Round<div>11:10-11:40</div>
-</a>
+  <tr>
+    <td>2</td>
+    <td>Anton Lerstrup Hylleberg</td>
+    <td>Denmark</td>
+    <td>1.74</td>
+    <td>3.30</td>
+    <td>6.61</td>
+    <td>1.91</td>
+    <td>3.63</td>
+    <td>2.95</td>
+    <td>1.74</td>
+  </tr>
 
 
 
-<a href="https://sircrazypaper.github.io/inturnetcubingilive2x2r2.html" class="lbutton">
-    2x2 H2H Final<div>13:30-13:50</div>
-</a>
 
-<a href="#" class="lbutton">
-    Pyraminx H2H Final<div>14:25-14:45</div>
-</a>
-
-<a href="https://sircrazypaper.github.io/inturnetcubingilive4x4r1.html" class="lbutton">
-    4x4 Final<div>14:45-16:00</div>
-</a>
-
-<a href="#" class="lbutton">
-    3x3 H2H Final<div>16:00-16:15</div>
-</a>
+  </tr>
+  </center></table>
