--- a/inturnetcubingilive2x2r2.html
+++ b/inturnetcubingilive2x2r2.html
@@ -33,7 +33,7 @@
 
 <p>spacer</p>
 
-<div class="lcompheader">2x2 First round</div>
+<div class="lcompheader">2x2 Final</div>
 
 <table><center>
   <tr>
@@ -69,8 +69,8 @@
     <td>3.30</td>
     <td>6.61</td>
     <td>1.91</td>
-    <td>3.63</td>
-    <td>2.95</td>
+    <td>3.53</td>
+    <td>2.91</td>
     <td>1.74</td>
   </tr>
 
