--- a/inturnetcubingilive.html
+++ b/inturnetcubingilive.html
@@ -63,7 +63,7 @@
     2x2 H2H Final<div>13:30-13:50</div>
 </a>
 
-<a href="#" class="lbutton">
+<a href="https://sircrazypaper.github.io/inturnetcubingilivepyrar2" class="lbutton">
     Pyraminx H2H Final<div>14:25-14:45</div>
 </a>
 
