--- a/inturnetcubingilivepyrar2.html
+++ b/inturnetcubingilivepyrar2.html
@@ -33,7 +33,7 @@
 
 <p>spacer</p>
 
-<div class="lcompheader">Pyraminx Final</div>
+<div class="lcompheader">Pyraminx First round</div>
 
 <table><center>
   <tr>
@@ -54,26 +54,38 @@
     <td>1</td>
     <td>Anton Lerstrup Hylleberg</td>
     <td>Denmark</td>
-    <td>5.01</td>
-    <td>6.52</td>
-    <td>3.93</td>
-    <td>6.56</td>
-    <td>13.05</td>
-    <td>6.03</td>
-    <td>3.93</td>
+    <td>WIN</td>
+    <td>WIN</td>
+    <td>WIN</td>
+    <td>WIN</td>
+    <td>WIN</td>
+    <td>WIN</td>
+    <td>WIN</td>
   </tr>
 
   <tr>
     <td>2</td>
     <td>Zacharias Mulbjerg</td>
     <td>Denmark</td>
-    <td>6.20</td>
-    <td>6.29</td>
-    <td>8.76</td>
-    <td>6.11</td>
-    <td>5.60</td>
-    <td>6.20</td>
-    <td>5.60</td>
+    <td>8.14</td>
+    <td>7.12</td>
+    <td>11.36</td>
+    <td>7.24</td>
+    <td>6.49</td>
+    <td>7.50</td>
+    <td>6.49</td>
+  </tr>
+  <tr>
+    <td>3</td>
+    <td>Diego Spallino Valderrama</td>
+    <td>Spain</td>
+    <td>8.31</td>
+    <td>19.13</td>
+    <td>9.52</td>
+    <td>12.77</td>
+    <td>9.92</td>
+    <td>10.74</td>
+    <td>9.92</td>
   </tr>
 
 
