--- a/inturnetcubingilive4x4r1.html
+++ b/inturnetcubingilive4x4r1.html
@@ -49,65 +49,47 @@
     <th>single</th>
   </tr>
 
+
+
   <tr>
-    <td></td>
-    <td>Alfred Anthony Riise Lucas</td>
-    <td>Denmark</td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-  </tr>
-  <tr>
-    <td></td>
-    <td>Anton Lerstrup Hylleberg</td>
-    <td>Denmark</td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-  </tr>
-  <tr>
-    <td></td>
+    <td>1</td>
     <td>Diego Spallino Valderrama</td>
     <td>Spain</td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
+    <td>44.96</td>
+    <td>49.28</td>
+    <td>43.64</td>
+    <td>48.03</td>
+    <td>38.87</td>
+    <td>45.54</td>
+    <td>38.87</td>
   </tr>
+
   <tr>
-    <td></td>
-    <td>Jonathan Karniala Lehmann</td>
-    <td>Denmark</td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-  </tr>
-  <tr>
-    <td></td>
+    <td>2</td>
     <td>Zacharias Mulbjerg</td>
     <td>Denmark</td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
+    <td>1:13.27</td>
+    <td>1:00.29</td>
+    <td>59.66</td>
+    <td>1:03.23</td>
+    <td>1:07.97</td>
+    <td>1:03.83</td>
+    <td>59.66</td>
   </tr>
+
+  <tr>
+    <td>3</td>
+    <td>Anton Lerstrup Hylleberg</td>
+    <td>Denmark</td>
+    <td>1:21.01</td>
+    <td>1:19.91</td>
+    <td>DNF</td>
+    <td>53.16</td>
+    <td>59.22</td>
+    <td>1:13.38</td>
+    <td>53.16</td>
+  </tr>
+
+
   </tr>
   </center></table>
