--- a/inturnetcubingilive.html
+++ b/inturnetcubingilive.html
@@ -71,6 +71,6 @@
     4x4 Final<div>14:45-16:00</div>
 </a>
 
-<a href="#" class="lbutton">
+<a href="https://sircrazypaper.github.io/inturnetcubingilive3x3r2.html" class="lbutton">
     3x3 H2H Final<div>16:00-16:15</div>
 </a>
