--- a/competitions.html
+++ b/competitions.html
@@ -45,7 +45,7 @@
 <p>spacer</p>
 <p>spacer</p>
 
-<div class="compinfo2"> August 20 2023 <a class="link" href="https://sircrazypaper.github.io/comp1.html">IN-TURN-ET CUBING I</a></div>
+<div class="compinfo2">  <a class="link" href=""></a></div>
 
 
 <p>spacer</p>
