--- a/livehome.html
+++ b/livehome.html
@@ -43,11 +43,7 @@
 
 <div class="liveh"><center>Right now</center></div>
 
-<a href='https://sircrazypaper.github.io/inturnetcubingilive.html'>
- <button class="lbutton">
-    IN-TURN-ET CUBING I<div>August 13</div>
- </button>
-</a>
+<p>spacer</p>
 
 <div class="liveh"><center>Upcoming</center><div>
 
