--- a/index.html
+++ b/index.html
@@ -1,49 +1,14 @@
 <!DOCTYPE html>
-
+<html lang="en" >
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="style.css" />
-    <title>IN-TURN-ET CUBING</title>
+  <meta charset="UTF-8">
+  <title>Index</title>
+  <link rel="stylesheet" href="./sircrazypaperweb.css">
 </head>
-
-<html>
 <body>
+<!-- partial:index.partial.html -->
 
-
-<nav class="navbar">
-  <header class="BN">IN-TURN-ET CUBING</header>
-  <div class="navbarpoints">
-    <ul>
-      <li><a href="https://sircrazypaper.github.io/">HOME</a></li>
-       <li><a href="https://sircrazypaper.github.io/about.html">ABOUT</a></li>
-      <li><a href="https://sircrazypaper.github.io/competitions.html">COMPETITIONS</a></li>
-      <li><a href="https://sircrazypaper.github.io/rules.html">RULES</a></li>
-      <li><a href="https://sircrazypaper.github.io/livehome.html">LIVE</a></li>
-      <li><a href="https://sircrazypaper.github.io/rankingsbutnotreally.html">RANKINGS</a></li>
-      <li><a href="https://sircrazypaper.github.io/competitors.html">COMPETITORS</a></li>
-      <li><a href="https://sircrazypaper.github.io/news.html">NEWS</a></li>
-      <p class=sacer>spacer</p>
-
-    </ul>
-  </div>
-</nav>
-
-<p>spacer</p>
-<p>spacer</p>
-
-<p style="text-align:center;">
-<img src="https://raw.githubusercontent.com/sircrazypaper/IN-TURN-ET_CUBING/main/Screenshot%202023-06-04%20at%2018.27.45.png" alt="Logo" width="600">  </p>
-
-<h class="text"><center>This is the official website for the online cubing competition IN-TURN-ET CUBING</center></h>
-
-<p>spacer</p>
-
-<h class="text"><center>Feel free to take a look at the different sections above. Happy cubing!</center></h>
-
-<p>spacer</p>
-<p>spacer</p>
-
+<h><center>Hello this is the sircrazypaper website.</center></h>
+<h><center>As of right now this is not going to be used for anything, but it may be later so stay tuned. :)</center></h>
 </body>
 </html>
