Add solve split

--- a/solve-split-tool-about.html
+++ b/solve-split-tool-about.html
@@ -15,7 +15,7 @@
   <p class="about-text">I have taken data from some of the top 30 fastest cubers solves and used that data to find out how much of their solves are spent on each step. Using that data and the data that you provide from inputting your solve splits, the program finds out which step you need to improve the most, and then I have added a small bit of text to help you improve based on your total solve speed and your speed on that specific step.
 </p>
 
-<a href="" class="back-to-tool">Back</a>
+<a href="https://sircrazypaper.github.io/solve-split-tool.html" class="back-to-tool">Back</a>
 </div>
 <!-- partial -->
 </body>
