--- a/solve-split-tool.html
+++ b/solve-split-tool.html
@@ -39,7 +39,7 @@
     <span id="step-to-improve"></span>
   </div>
   <div class="bottom">
-    <a class="about-link" href="">About</a>
+    <a class="about-link" href="https://sircrazypaper.github.io/solve-split-tool-about.html">About</a>
   </div>
 </div>
 <!-- partial -->
