--- a/solve-split-tool-about.html
+++ b/solve-split-tool-about.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>About</title>
+  <link rel="icon" type="image/x-icon" href="Favicon for solve splits.png">
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
