--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Shopping App</title>
 
   <link rel="stylesheet" href="./index.css">
+  <link rel="manifest" href="./manifest.json">
 
   <script src="./dexie.min.js"></script>
   <script>
