--- a/index.html
+++ b/index.html
@@ -3,51 +3,13 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Shopping App</title>
+  <title>Sircrazypaper</title>
 
   <link rel="stylesheet" href="./index.css">
-  <link rel="manifest" href="./manifest.json">
-
-  <script src="./dexie.min.js"></script>
-  <script>
-    if ('serviceWorker' in navigator) {
-      window.addEventListener('load', () => {
-        navigator.serviceWorker.register('./sw.js');
-      });
-    }
-  </script>
 </head>
-
 <body>
-<nav>
-  <p>My list</p>
-</nav>
 
-<div class="container">
-  <form id="itemForm">
-    <label>
-      Name of Item:
-      <input type="text" id="nameInput" required>
-    </label>
+  <h1> This is my website, it is empty for now, but it might be used for something later... </h1>
 
-    <label>
-      Quantity:
-      <input type="number" id="quantityInput" value=1>
-    </label>
-
-    <label>
-      Price:
-      <input type="number" id="priceInput" value=0>
-    </label>
-
-    <button type="submit" id="addItemButton">Add item</button>
-  </form>
-
-  <div id="itemsDiv"></div>
-  <div id="totalPriceDiv"></div>
-
-</div>
-
-<script src="./index.js"></script>
 </body>
 </html>
